--- a/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
@@ -33,7 +33,7 @@
 
 <h:panelGroup layout="block" styleClass="full_area0 itemBlock" rendered="#{!ViewItemFull.isStateWithdrawn}">
 	<h3 class="xLarge_area0_p8 endline blockHeader">
-		<h:outputText value="#{lbl.ViewItemFull_lblBasic}" />
+		<h:outputText id="lblViewItemFull_lblBasic" value="#{lbl.ViewItemFull_lblBasic}" />
 	</h3>
 	<span class="seperator"></span>
 	<div class="free_area0 itemBlockContent endline">
@@ -41,28 +41,28 @@
 <%-- Citation URL --%>
 		<div class="free_area0 endline itemLine noTopBorder" >
 			<b class="xLarge_area0_p8 endline labelLine clear">
-				<h:outputText value="#{lbl.ViewItemFull_lblCiteItemAs}" /><span class="noDisplay">: </span>
+				<h:outputText id="lblViewItemFull_lblCiteItemAs" value="#{lbl.ViewItemFull_lblCiteItemAs}" /><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputLink value="#{ViewItemFull.citationURL}" rendered="#{!ViewItemFull.isStatePending}">
+				<h:outputLink id="lnkCitationURL" value="#{ViewItemFull.citationURL}" rendered="#{!ViewItemFull.isStatePending}">
 					<h:outputText value="#{ViewItemFull.citationURL}"/>
 				</h:outputLink>	
-			<h:outputText value="#{lbl.lbl_noEntry}" rendered="#{ViewItemFull.isStatePending}"/>
+			<h:outputText id="lblNoEntryCitationURL" value="#{lbl.lbl_noEntry}" rendered="#{ViewItemFull.isStatePending}"/>
 			</span>
 			<h:panelGroup styleClass="large_area0_p8 lineToolSection socialBookmarking" rendered="#{!ViewItemFull.isStatePending}">
-				<h:graphicImage title="#{lbl.ViewItemFull_lblSocialBookmarking_CiteULike}" styleClass="min_imgArea sectionTool pointer" url="http://www.informaworld.com/images/bookmarks/citeulike.gif" onclick="citeULikeLink();"/>
+				<h:graphicImage id="imgSocialBookmarkingCiteULike" title="#{lbl.ViewItemFull_lblSocialBookmarking_CiteULike}" styleClass="min_imgArea sectionTool pointer" url="http://www.informaworld.com/images/bookmarks/citeulike.gif" onclick="citeULikeLink();"/>
 				<script type="text/javascript">
 					function citeULikeLink() {
 						window.open('http://www.citeulike.org/posturl?url='+encodeURIComponent('<h:outputText value="#{ViewItemFull.citationURL}"/>')+'&title='+encodeURIComponent('<h:outputText value="#{lbl.ViewItemFull_lblSocialBookmarkingDescription}"/> <h:outputText converter="JavascriptEscapeConverter" value="#{ViewItemFull.pubItem.metadata.title.value}"/>'),'add','toolbar=no,width=720,height=755,scrollbars,resizable');
 					}
 				</script>
-				<h:graphicImage title="#{lbl.ViewItemFull_lblSocialBookmarking_Connotea}" styleClass="min_imgArea sectionTool pointer" url="http://www.connotea.org/icon.png" onclick="connoteaLink();"/>
+				<h:graphicImage id="imgSocialBookmarkingConnotea" title="#{lbl.ViewItemFull_lblSocialBookmarking_Connotea}" styleClass="min_imgArea sectionTool pointer" url="http://www.connotea.org/icon.png" onclick="connoteaLink();"/>
 				<script type="text/javascript">
 					function connoteaLink() {
 						window.open('http://www.connotea.org/addpopup?continue=confirm&uri='+encodeURIComponent('<h:outputText value="#{ViewItemFull.citationURL}"/>')+'&usertitle='+encodeURIComponent('<h:outputText value="#{lbl.ViewItemFull_lblSocialBookmarkingDescription}"/> <h:outputText converter="JavascriptEscapeConverter" value="#{ViewItemFull.pubItem.metadata.title.value}"/>'),'add','toolbar=no,width=720,height=755,scrollbars,resizable');
 					}
 				</script>
-				<h:graphicImage title="#{lbl.ViewItemFull_lblSocialBookmarking_Delicious}" styleClass="min_imgArea sectionTool pointer" url="http://static.delicious.com/img/delicious.small.gif" onclick="deliciousLink();"/>
+				<h:graphicImage id="imgSocialBookmarkingDelicious" title="#{lbl.ViewItemFull_lblSocialBookmarking_Delicious}" styleClass="min_imgArea sectionTool pointer" url="http://static.delicious.com/img/delicious.small.gif" onclick="deliciousLink();"/>
 				<script type="text/javascript">
 					function deliciousLink() {
 						window.open('http://delicious.com/save?v=5&amp;noui&amp;jump=close&amp;url='+encodeURIComponent('<h:outputText value="#{ViewItemFull.citationURL}"/>')+'&amp;title='+encodeURIComponent('<h:outputText value="#{lbl.ViewItemFull_lblSocialBookmarkingDescription}"/> <h:outputText converter="JavascriptEscapeConverter" value="#{ViewItemFull.pubItem.metadata.title.value}"/>'), 'delicious','toolbar=no,width=550,height=550');
@@ -75,10 +75,10 @@
 <%-- Genre --%>
 		<div class="free_area0 endline itemLine">
 			<b class="xLarge_area0_p8 endline labelLine clear">
-				<h:outputText value="#{lbl.ViewItemFull_lblGenre}" /><span class="noDisplay">: </span>
+				<h:outputText id="lblViewItemFull_lblGenre" value="#{lbl.ViewItemFull_lblGenre}" /><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputText value="#{ViewItemFull.genre}" />
+				<h:outputText id="txtGenre" value="#{ViewItemFull.genre}" />
 			</span>
 		</div>
 
@@ -86,16 +86,16 @@
 		<tr:iterator var="altTitle" value="#{ViewItemFull.pubItem.metadata.alternativeTitles}" binding="#{ViewItemFull.titleIterator}" varStatus="index">
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
 				<b class="xLarge_area0_p8 endline labelLine clear">
-					<h:outputText value="#{lbl.ViewItemFull_lblAlternativeTitle}"/><span class="noDisplay">: </span>
+					<h:outputText id="lblViewItemFull_lblAlternativeTitle" value="#{lbl.ViewItemFull_lblAlternativeTitle}"/><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText value="#{altTitle.value}" rendered="#{altTitle.value != ''}"/>
-					<h:outputText value="&#160;" rendered="#{altTitle.value == ''}" escape="false"/>
+					<h:outputText id="txtAlternativeTitle" value="#{altTitle.value}" rendered="#{altTitle.value != ''}"/>
+					<h:outputText id="txtAlternativeTitleEmpty" value="&#160;" rendered="#{altTitle.value == ''}" escape="false"/>
 				</span>
 			</h:panelGroup>
 		</tr:iterator>	
 	
-		<a class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} #{lbl.ViewItemFull_lblBasic}" /></a>	
+		<a id="lnkHideGroupBasic" class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} #{lbl.ViewItemFull_lblBasic}" /></a>	
 	</div>
-	<a class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}  #{lbl.ViewItemFull_lblBasic}" /></a>
+	<a id="lnkShowGroupBasic" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}  #{lbl.ViewItemFull_lblBasic}" /></a>
 </h:panelGroup>
