--- a/pubman/pubman_presentation/src/main/webapp/viewItem/DetailGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/DetailGroup.jspf
@@ -33,7 +33,7 @@
 
 <h:panelGroup layout="block" styleClass="full_area0 itemBlock" rendered="#{!ViewItemFull.isStateWithdrawn}">
 	<h3 class="xLarge_area0_p8 endline blockHeader">
-		<h:outputText value="#{lbl.ViewItemFull_lblSubHeaderDetails}" />
+		<h:outputText id="lblViewItemFull_lblSubHeaderDetails" value="#{lbl.ViewItemFull_lblSubHeaderDetails}" />
 	</h3>
 	<span class="seperator"></span>
 	<h:panelGroup layout="block" styleClass="free_area0 itemBlockContent endline" rendered="#{ViewItemFull.showDetails}">
@@ -41,14 +41,14 @@
 <%-- Languages --%>
 		<div class="free_area0 endline itemLine noTopBorder">
 			<b class="xLarge_area0_p8 endline labelLine clear">
-				<h:outputText value="#{lbl.ViewItemFull_lblLanguages}"/><span class="noDisplay">: </span>
+				<h:outputText id="lblViewItemFull_lblLanguages" value="#{lbl.ViewItemFull_lblLanguages}"/><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
 				<tr:iterator var="languages" value="#{ViewItemFull.pubItem.metadata.languages}" binding="#{ViewItemFull.languagesIterator}" varStatus="index">
-					<h:outputText value="#{languages}"/>
-					<h:outputText value=", " rendered="#{ViewItemFull.languagesIterator.rowIndex +1 < ViewItemFull.languagesIterator.rowCount}"/>
+					<h:outputText id="txtLanguages" value="#{languages}"/>
+					<h:outputText id="txtLanguagesSeparator" value=", " rendered="#{ViewItemFull.languagesIterator.rowIndex +1 < ViewItemFull.languagesIterator.rowCount}"/>
 				</tr:iterator>
-				<h:outputText value="#{lbl.lbl_noEntry}" rendered="#{ViewItemFull.languagesIterator.rowCount <= 0}"/>
+				<h:outputText id="txtLanguagesEmpty" value="#{lbl.lbl_noEntry}" rendered="#{ViewItemFull.languagesIterator.rowCount <= 0}"/>
 			</span>
 		</div>
 
@@ -59,28 +59,28 @@
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
 				<h:panelGroup styleClass="large_area0 tiny_marginRIncl" rendered="#{ViewItemFull.pubItem.metadata.dateCreated != null && ViewItemFull.pubItem.metadata.dateCreated != ''}" >
-					<h:outputLabel styleClass="large_label" value="#{lbl.ViewItem_lblDateCreated}: " />
-					<h:outputText styleClass="large_area0" value="#{ViewItemFull.pubItem.metadata.dateCreated}"/>
+					<h:outputLabel id="lblViewItem_lblDateCreated" styleClass="large_label" value="#{lbl.ViewItem_lblDateCreated}: " />
+					<h:outputText id="txtDateCreated" styleClass="large_area0" value="#{ViewItemFull.pubItem.metadata.dateCreated}"/>
 				</h:panelGroup>
 				<h:panelGroup styleClass="large_area0 tiny_marginRIncl" rendered="#{ViewItemFull.pubItem.metadata.dateModified != null && ViewItemFull.pubItem.metadata.dateModified != ''}" >
-					<h:outputLabel styleClass="large_label" value="#{lbl.ViewItem_lblDateModified}: " />
-					<h:outputText styleClass="large_area0" value="#{ViewItemFull.pubItem.metadata.dateModified}"/>
+					<h:outputLabel id="lblViewItem_lblDateModified" styleClass="large_label" value="#{lbl.ViewItem_lblDateModified}: " />
+					<h:outputText id="txtDateModified" styleClass="large_area0" value="#{ViewItemFull.pubItem.metadata.dateModified}"/>
 				</h:panelGroup>
 				<h:panelGroup styleClass="large_area0 tiny_marginRIncl" rendered="#{ViewItemFull.pubItem.metadata.dateSubmitted != null && ViewItemFull.pubItem.metadata.dateSubmitted != ''}" >
-					<h:outputLabel styleClass="large_label" value="#{lbl.ViewItem_lblDateSubmitted}: "/>
-					<h:outputText styleClass="large_area0" value="#{ViewItemFull.pubItem.metadata.dateSubmitted}"/>
+					<h:outputLabel id="lblViewItem_lblDateSubmitted" styleClass="large_label" value="#{lbl.ViewItem_lblDateSubmitted}: "/>
+					<h:outputText id="txtDateSubmitted" styleClass="large_area0" value="#{ViewItemFull.pubItem.metadata.dateSubmitted}"/>
 				</h:panelGroup>
 				<h:panelGroup styleClass="large_area0 tiny_marginRIncl" rendered="#{ViewItemFull.pubItem.metadata.dateAccepted != null && ViewItemFull.pubItem.metadata.dateAccepted != ''}" >
-					<h:outputLabel styleClass="large_label" value="#{lbl.ViewItem_lblDateAccepted}: "/>
-					<h:outputText styleClass="large_area0" value="#{ViewItemFull.pubItem.metadata.dateAccepted}"/>
+					<h:outputLabel id="lblViewItem_lblDateAccepted" styleClass="large_label" value="#{lbl.ViewItem_lblDateAccepted}: "/>
+					<h:outputText id="txtDateAccepted" styleClass="large_area0" value="#{ViewItemFull.pubItem.metadata.dateAccepted}"/>
 				</h:panelGroup>
 				<h:panelGroup styleClass="large_area0 tiny_marginRIncl" rendered="#{ViewItemFull.pubItem.metadata.datePublishedOnline != null && ViewItemFull.pubItem.metadata.datePublishedOnline != ''}" >
-					<h:outputLabel styleClass="large_label" value="#{lbl.ViewItem_lblDatePublishedOnline}: "/>
-					<h:outputText styleClass="large_area0" value="#{ViewItemFull.pubItem.metadata.datePublishedOnline}"/>
+					<h:outputLabel id="lblViewItem_lblDatePublishedOnline" styleClass="large_label" value="#{lbl.ViewItem_lblDatePublishedOnline}: "/>
+					<h:outputText id="txtDatePublishedOnline" styleClass="large_area0" value="#{ViewItemFull.pubItem.metadata.datePublishedOnline}"/>
 				</h:panelGroup>
 				<h:panelGroup styleClass="large_area0 tiny_marginRIncl" rendered="#{ViewItemFull.pubItem.metadata.datePublishedInPrint != null && ViewItemFull.pubItem.metadata.datePublishedInPrint != ''}" >
-					<h:outputLabel styleClass="large_label" value="#{lbl.ViewItem_lblDatePublishedInPrint}: "/>
-					<h:outputText styleClass="large_area0" value="#{ViewItemFull.pubItem.metadata.datePublishedInPrint}"/>
+					<h:outputLabel id="lblViewItem_lblDatePublishedInPrint" styleClass="large_label" value="#{lbl.ViewItem_lblDatePublishedInPrint}: "/>
+					<h:outputText id="txtDatePublishedInPrint" styleClass="large_area0" value="#{ViewItemFull.pubItem.metadata.datePublishedInPrint}"/>
 				</h:panelGroup>
 			</span>
 		</div>
@@ -88,81 +88,81 @@
 <%-- Pages --%>
 		<div class="free_area0 endline itemLine">
 			<b class="xLarge_area0_p8 endline labelLine clear">
-				&#160;<h:outputText value="#{lbl.ViewItemFull_lblPages}"/><span class="noDisplay">: </span>
+				&#160;<h:outputText id="lblViewItemFull_lblPages" value="#{lbl.ViewItemFull_lblPages}"/><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputText value="#{ViewItemFull.pubItem.metadata.totalNumberOfPages}"/>
-				<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.pubItem.metadata.totalNumberOfPages == null  || ViewItemFull.pubItem.metadata.totalNumberOfPages == ''}"/>
+				<h:outputText id="txtTotalNumberOfPages" value="#{ViewItemFull.pubItem.metadata.totalNumberOfPages}"/>
+				<h:outputText id="txtTotalNumberOfPagesEmpty" value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.pubItem.metadata.totalNumberOfPages == null  || ViewItemFull.pubItem.metadata.totalNumberOfPages == ''}"/>
 			</span>
 		</div>
 
 <%-- Publishing Info --%>
 		<div class="free_area0 endline itemLine">
 			<b class="xLarge_area0_p8 endline labelLine clear">
-				&#160;<h:outputText value="#{lbl.ViewItemFull_lblPublishingInfo}"/><span class="noDisplay">: </span>
+				&#160;<h:outputText id="lblViewItemFull_lblPublishingInfo" value="#{lbl.ViewItemFull_lblPublishingInfo}"/><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputText value="#{ViewItemFull.publishingInfo}"/>
-				<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.publishingInfo == '' || ViewItemFull.publishingInfo == null}"/>
+				<h:outputText id="txtPublishingInfo" value="#{ViewItemFull.publishingInfo}"/>
+				<h:outputText id="txtPublishingInfoEmpty" value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.publishingInfo == '' || ViewItemFull.publishingInfo == null}"/>
 			</span>
 		</div>
 
 <%-- Table of Content --%>
 		<div class="free_area0 endline itemLine">
 			<b class="xLarge_area0_p8 endline labelLine clear">
-				&#160;<h:outputText value="#{lbl.ViewItemFull_lblTOC}"/><span class="noDisplay">: </span>
+				&#160;<h:outputText id="lblViewItemFull_lblTOC" value="#{lbl.ViewItemFull_lblTOC}"/><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputText value="#{ViewItemFull.pubItem.metadata.tableOfContents.value}" converter="HTMLEscapeConverter" escape="false"/>
-				<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.pubItem.metadata.tableOfContents.value == null || ViewItemFull.pubItem.metadata.tableOfContents.value == ''}"/>
+				<h:outputText id="txtTableOfContents" value="#{ViewItemFull.pubItem.metadata.tableOfContents.value}" converter="HTMLEscapeConverter" escape="false"/>
+				<h:outputText id="txtTableOfContentsEmpty" value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.pubItem.metadata.tableOfContents.value == null || ViewItemFull.pubItem.metadata.tableOfContents.value == ''}"/>
 			</span>
 		</div>
 
 <%-- Review method --%>
 		<div class="free_area0 endline itemLine">
 			<b class="xLarge_area0_p8 endline labelLine clear">
-				&#160;<h:outputText value="#{lbl.ViewItemFull_lblRevisionMethod}"/><span class="noDisplay">: </span>
+				&#160;<h:outputText id="lblViewItemFull_lblRevisionMethod" value="#{lbl.ViewItemFull_lblRevisionMethod}"/><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputText value="#{ViewItemFull.reviewMethod}"/>
-				<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.reviewMethod == '' || ViewItemFull.reviewMethod == null}"/>
+				<h:outputText id="txtReviewMethod" value="#{ViewItemFull.reviewMethod}"/>
+				<h:outputText id="txtReviewMethodEmpty" value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.reviewMethod == '' || ViewItemFull.reviewMethod == null}"/>
 			</span>
 		</div>
 
 <%-- Identifiers --%>
 		<div class="free_area0 endline itemLine">
 			<b class="xLarge_area0_p8 endline labelLine clear">
-				&#160;<h:outputText value="#{lbl.ViewItemFull_lblIdentifiers}"/><span class="noDisplay">: </span>
+				&#160;<h:outputText id="lblViewItemFull_lblIdentifiers" value="#{lbl.ViewItemFull_lblIdentifiers}"/><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputText value="#{ViewItemFull.identifiers}" escape="false"/>
-				<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.identifiers == '' || ViewItemFull.identifiers == null}"/>
+				<h:outputText id="txtIdentifiers" value="#{ViewItemFull.identifiers}" escape="false"/>
+				<h:outputText id="txtIdentifiersEmpty" value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.identifiers == '' || ViewItemFull.identifiers == null}"/>
 			</span>
 		</div>
 
 <%-- Degree Type --%>
 		<div class="free_area0 endline itemLine">
 			<b class="xLarge_area0_p8 endline labelLine clear">
-				&#160;<h:outputText value="#{lbl.ViewItemFull_lblDegreeType}"/><span class="noDisplay">: </span>
+				&#160;<h:outputText id="lblViewItemFull_lblDegreeType" value="#{lbl.ViewItemFull_lblDegreeType}"/><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputText value="#{ViewItemFull.degreeType}"/>
-				<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.degreeType == '' || ViewItemFull.degreeType == null}"/>
+				<h:outputText id="txtDegreeType" value="#{ViewItemFull.degreeType}"/>
+				<h:outputText id="txtDegreeTypeEmpty" value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.degreeType == '' || ViewItemFull.degreeType == null}"/>
 			</span>
 		</div>
 
 <%-- Publication Location --%>
 		<div class="free_area0 endline itemLine">
 			<b class="xLarge_area0_p8 endline labelLine clear">
-				&#160;<h:outputText value="#{lbl.ViewItemFull_lblPublicationLocation}"/><span class="noDisplay">: </span>
+				&#160;<h:outputText id="lblViewItemFull_lblPublicationLocation" value="#{lbl.ViewItemFull_lblPublicationLocation}"/><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputText value="#{ViewItemFull.pubItem.metadata.location}"/>
-				<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.pubItem.metadata.location == null || ViewItemFull.pubItem.metadata.location == ''}"/>
+				<h:outputText id="txtLocation" value="#{ViewItemFull.pubItem.metadata.location}"/>
+				<h:outputText id="txtLocationEmpty" value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.pubItem.metadata.location == null || ViewItemFull.pubItem.metadata.location == ''}"/>
 			</span>
 		</div>
 
-		<a class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} #{lbl.ViewItemFull_lblSubHeaderDetails}" /></a>	
+		<a id="lnkHideGroupDetails" class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} #{lbl.ViewItemFull_lblSubHeaderDetails}" /></a>	
 	</h:panelGroup>
-	<a class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}  #{lbl.ViewItemFull_lblSubHeaderDetails}" /></a>
+	<a id="lnkShowGroupDetails" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}  #{lbl.ViewItemFull_lblSubHeaderDetails}" /></a>
 </h:panelGroup>
