--- a/pubman/pubman_presentation/src/main/webapp/viewItem/LocatorsGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/LocatorsGroup.jspf
@@ -33,7 +33,7 @@
 
 <h:panelGroup id="locators" layout="block" styleClass="full_area0 itemBlock" rendered="#{!ViewItemFull.isStateWithdrawn}">
 	<h3 class="xLarge_area0_p8 endline blockHeader">
-		<h:outputText value="#{lbl.ViewItemFull_lblSubHeaderLocators}" />
+		<h:outputText id="lblViewItemFull_lblSubHeaderLocators" value="#{lbl.ViewItemFull_lblSubHeaderLocators}" />
 	</h3>
 	<span class="seperator"></span>
 	<h:panelGroup layout="block" styleClass="free_area0 itemBlockContent endline" rendered="#{ViewItemFull.showLocators}">
@@ -45,77 +45,77 @@
 <%-- Locator URL --%>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
 				<b class="xLarge_area0_p8 endline labelLine">
-					<h:outputText value="#{lbl.ViewItemFull_lblLocatorLocation}"/><span class="noDisplay">: <br /></span>
+					<h:outputText id="lblViewItemFull_lblSubHeaderLocators" value="#{lbl.ViewItemFull_lblLocatorLocation}"/><span class="noDisplay">: <br /></span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-						<h:outputLink value="#{locator.locatorLink}" rendered="#{ViewItemFull.isStateWithdrawn == false && locator.locatorIsLink}" target="_blank" title="#{locator.file.description}">
+						<h:outputLink id="lnkLocatorLink" value="#{locator.locatorLink}" rendered="#{ViewItemFull.isStateWithdrawn == false && locator.locatorIsLink}" target="_blank" title="#{locator.file.description}">
 							<h:outputText value="#{locator.fileName}" />
 						</h:outputLink>
-						<h:outputText value="#{locator.fileName}" rendered="#{ViewItemFull.isStateWithdrawn == false && !locator.locatorIsLink}"/>
-						<h:outputText value=" (#{locator.contentCategory})" rendered="#{ViewItemFull.isStateWithdrawn == false}"/>
-						<h:outputText value="#{lbl.ViewItemFull_lblNoAccess}" rendered="#{ViewItemFull.isStateWithdrawn == true}"/>
+						<h:outputText id="txtLocatorFileName" value="#{locator.fileName}" rendered="#{ViewItemFull.isStateWithdrawn == false && !locator.locatorIsLink}"/>
+						<h:outputText id="txtLocatorContentCategory" value=" (#{locator.contentCategory})" rendered="#{ViewItemFull.isStateWithdrawn == false}"/>
+						<h:outputText id="txtLocatorEmpty" value="#{lbl.ViewItemFull_lblNoAccess}" rendered="#{ViewItemFull.isStateWithdrawn == true}"/>
 				</span>
 			</h:panelGroup>
 <%-- Locator description --%>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
 				<b class="xLarge_area0_p8 endline labelLine">
-					<h:outputText value="#{lbl.ViewItemMedium_lblFileDescription}"/><span class="noDisplay">: <br /></span>
+					<h:outputText id="lblLocatorDescription" value="#{lbl.ViewItemMedium_lblFileDescription}"/><span class="noDisplay">: <br /></span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText value="#{locator.fileDescription}" rendered="#{ViewItemFull.isStateWithdrawn == false}"/>
-					<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{locator.fileDescription == null  || locator.fileDescription == ''}"/>
+					<h:outputText id="txtLocatorDescription" value="#{locator.fileDescription}" rendered="#{ViewItemFull.isStateWithdrawn == false}"/>
+					<h:outputText id="txtLocatorDescriptionEmpty" value="#{lbl.lbl_noEntry}" rendered ="#{locator.fileDescription == null  || locator.fileDescription == ''}"/>
 				</span>
 			</h:panelGroup>
 <%-- Locator visibility --%>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
 				<b class="xLarge_area0_p8 endline labelLine">
-					<h:outputText value="#{lbl.ViewItemMedium_lblFileVisibility}"/><span class="noDisplay">: <br /></span>
+					<h:outputText id="lblLocatorVisibility" value="#{lbl.ViewItemMedium_lblFileVisibility}"/><span class="noDisplay">: <br /></span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText value="#{locator.visibility}" rendered="#{ViewItemFull.isStateWithdrawn == false}"/>
-					<h:outputText value="#{lbl.ViewItemFull_lblWithdrawn}" rendered="#{ViewItemFull.isStateWithdrawn == true}"/>
+					<h:outputText id="txtLocatorVisibility" value="#{locator.visibility}" rendered="#{ViewItemFull.isStateWithdrawn == false}"/>
+					<h:outputText id="txtLocatorVisibilityEmpty" value="#{lbl.ViewItemFull_lblWithdrawn}" rendered="#{ViewItemFull.isStateWithdrawn == true}"/>
 				</span>
 			</h:panelGroup>
 
 <%-- Copyright Date --%>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine" rendered="true">
 				<b class="xLarge_area0_p8 endline labelLine">
-					<h:outputText value="#{lbl.ViewItem_lblCopyrightDate}"/><span class="noDisplay">: <br /></span>
+					<h:outputText id="lblLocatorCopyrightDate" value="#{lbl.ViewItem_lblCopyrightDate}"/><span class="noDisplay">: <br /></span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText value="#{locator.file.defaultMetadata.copyrightDate}" rendered="true"/>
-					<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{locator.file.defaultMetadata.copyrightDate == null  || locator.file.defaultMetadata.copyrightDate == ''}"/>
+					<h:outputText id="txtLocatorCopyrightDate" value="#{locator.file.defaultMetadata.copyrightDate}" rendered="true"/>
+					<h:outputText id="txtLocatorCopyrightDateEmpty" value="#{lbl.lbl_noEntry}" rendered ="#{locator.file.defaultMetadata.copyrightDate == null  || locator.file.defaultMetadata.copyrightDate == ''}"/>
 				</span>
 			</h:panelGroup>
 
 <%-- Copyright Info --%>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine" rendered="true">
 				<b class="xLarge_area0_p8 endline labelLine">
-					<h:outputText value="#{lbl.ViewItem_lblCopyrightInfo}"/><span class="noDisplay">: <br /></span>
+					<h:outputText id="lblLocatorCopyrightInfo" value="#{lbl.ViewItem_lblCopyrightInfo}"/><span class="noDisplay">: <br /></span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText value="#{locator.file.defaultMetadata.rights}" rendered="true"/>
-					<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{locator.file.defaultMetadata.rights == null  || locator.file.defaultMetadata.rights == ''}"/>
+					<h:outputText id="txtLocatorCopyrightInfo" value="#{locator.file.defaultMetadata.rights}" rendered="true"/>
+					<h:outputText id="txtLocatorCopyrightInfoEmpty" value="#{lbl.lbl_noEntry}" rendered ="#{locator.file.defaultMetadata.rights == null  || locator.file.defaultMetadata.rights == ''}"/>
 				</span>
 			</h:panelGroup>
 
 <%-- Locator License --%>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine" rendered="true">
 				<b class="xLarge_area0_p8 endline labelLine">
-					<h:outputText value="#{lbl.ViewItemFull_lblFileLicense}"/><span class="noDisplay">: <br /></span>
+					<h:outputText id="lblLocatorFileLicense" value="#{lbl.ViewItemFull_lblFileLicense}"/><span class="noDisplay">: <br /></span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputLink value="#{locator.file.defaultMetadata.license}" target="_blank" title="#{lbl.ViewItemFull_lblFileLicenseShow}" rendered="#{locator.file.defaultMetadata.license != ''}"><h:outputText value="#{locator.file.defaultMetadata.license}" rendered="true"/></h:outputLink>
-					<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{locator.file.defaultMetadata.license == null  || locator.file.defaultMetadata.license == ''}"/>
+					<h:outputLink id="txtLocatorFileLicense" value="#{locator.file.defaultMetadata.license}" target="_blank" title="#{lbl.ViewItemFull_lblFileLicenseShow}" rendered="#{locator.file.defaultMetadata.license != ''}"><h:outputText value="#{locator.file.defaultMetadata.license}" rendered="true"/></h:outputLink>
+					<h:outputText id="txtLocatorFileLicenseEmpty" value="#{lbl.lbl_noEntry}" rendered ="#{locator.file.defaultMetadata.license == null  || locator.file.defaultMetadata.license == ''}"/>
 				</span>
 				<h:panelGroup styleClass="large_area0_p8 lineToolSection" rendered="true">
-					<h:graphicImage styleClass="sectionTool" url="#{locator.urlToLicenceImage}" value="#{locator.urlToLicenceImage}" rendered="#{locator.urlToLicenceImage != ''}"/>
+					<h:graphicImage id="imgLocatorUrlToLicenceImage" styleClass="sectionTool" url="#{locator.urlToLicenceImage}" value="#{locator.urlToLicenceImage}" rendered="#{locator.urlToLicenceImage != ''}"/>
 				</h:panelGroup>
 			</h:panelGroup>
 
 		</tr:iterator>
 
-		<a class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} #{lbl.ViewItemFull_lblSubHeaderLocators}" /></a>	
+		<a id="lnkHideGroupLocator" class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} #{lbl.ViewItemFull_lblSubHeaderLocators}" /></a>	
 	</h:panelGroup>
-	<a class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}  #{lbl.ViewItemFull_lblSubHeaderLocators}" /></a>
+	<a id="lnkShowGroupLocator" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}  #{lbl.ViewItemFull_lblSubHeaderLocators}" /></a>
 </h:panelGroup>
