--- a/pubman/pubman_presentation/src/main/webapp/viewItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/PersOrgGroup.jspf
@@ -33,7 +33,7 @@
 
 <h:panelGroup layout="block" styleClass="full_area0 itemBlock" rendered="#{!ViewItemFull.isStateWithdrawn}">
 	<h3 class="xLarge_area0_p8 endline blockHeader">
-		<h:outputText value="#{lbl.ViewItemFull_lblCreators}" />
+		<h:outputText id="lblViewItemFull_lblCreatorsHeader" value="#{lbl.ViewItemFull_lblCreators}" />
 	</h3>
 	<span class="seperator"></span>
 	<div class="free_area0 itemBlockContent endline">
@@ -41,22 +41,22 @@
 <%-- Creators --%>
 		<div class="free_area0 endline itemLine noTopBorder">
 			<b class="xLarge_area0_p8 endline labelLine">
-				<sup>&nbsp;</sup><h:outputText value="#{lbl.ViewItemFull_lblCreators}"/><span class="noDisplay">: <br /></span>
+				<sup>&nbsp;</sup><h:outputText id="lblViewItemFull_lblCreators" value="#{lbl.ViewItemFull_lblCreators}"/><span class="noDisplay">: <br /></span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
 				<tr:iterator var="creatorPerson" value="#{ViewItemFull.creatorArray}" rows="0">
 					<h:panelGroup styleClass="free_area0 creator">
-						<h:outputText value="#{creatorPerson.formattedDisplay}" escape="false"/>
+						<h:outputText id="txtCreatorPersonFormattedDisplay" value="#{creatorPerson.formattedDisplay}" escape="false"/>
 						<h:panelGroup rendered="#{creatorPerson.portfolioLink != null}">
 							&#160;
-							<h:outputLink styleClass="authorCard" value="#{creatorPerson.portfolioLink}?lang=#{InternationalizationHelper.locale}" target="_blank">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
+							<h:outputLink id="lnkCreatorPersonPortfolioLink" styleClass="authorCard" value="#{creatorPerson.portfolioLink}?lang=#{InternationalizationHelper.locale}" target="_blank">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
 						</h:panelGroup>
 					</h:panelGroup>
 					<h:outputText value="<br />" escape="false"/>
 				</tr:iterator>
 				<tr:iterator var="creatorOrganization" value="#{ViewItemFull.creatorOrganizationsArray}" >
 					<h:panelGroup styleClass="free_area0 creator">
-						<h:outputText value="#{creatorOrganization.organizationName}"/>
+						<h:outputText id="txtCreatorOrganizationOrganizationName" value="#{creatorOrganization.organizationName}"/>
 					</h:panelGroup>
 					<h:outputText value="<br />" escape="false"/>
 				</tr:iterator>		
@@ -66,16 +66,16 @@
 <%-- Affiliations --%>
 		<div class="free_area0 endline itemLine">
 			<b class="xLarge_area0_p8 endline labelLine">
-				<h:outputText value="#{lbl.ViewItemFull_lblAffiliations}"/><span class="noDisplay">: <br /></span>
+				<h:outputText id="lblViewItemFull_lblAffiliations" value="#{lbl.ViewItemFull_lblAffiliations}"/><span class="noDisplay">: <br /></span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
 				<tr:iterator var="creatorAffiliation" value="#{ViewItemFull.organizationList}" rows="0">
 					<h:panelGroup styleClass="xTiny_area0 endline"><h:outputText value="#{creatorAffiliation.position}"/></h:panelGroup>
 					<h:panelGroup styleClass="free_area0 affiliation">
-						<h:outputText value="#{creatorAffiliation.organizationName}, #{creatorAffiliation.organizationAddress}, #{creatorAffiliation.organizationIdentifier}"/>
+						<h:outputText id="txtCreatorAffiliation" value="#{creatorAffiliation.organizationName}, #{creatorAffiliation.organizationAddress}, #{creatorAffiliation.organizationIdentifier}"/>
 						<h:panelGroup rendered="#{creatorAffiliation.hasOrganizationalIdentifier}">
 							&#160;
-							<h:outputLink value="" styleClass="ouCard" onclick="openCenteredWindow('#{ApplicationBean.appContext}AffiliationDetailPage.jsp?id=#{creatorAffiliation.organizationIdentifier}', 980, 400, 'Details');return false" target="_blank">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
+							<h:outputLink id="lnkAffiliationDetail" value="" styleClass="ouCard" onclick="openCenteredWindow('#{ApplicationBean.appContext}AffiliationDetailPage.jsp?id=#{creatorAffiliation.organizationIdentifier}', 980, 400, 'Details');return false" target="_blank">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
 						</h:panelGroup>
 					</h:panelGroup>
 					<h:outputText value="<br />" escape="false"/>
@@ -83,7 +83,7 @@
 			</span>
 		</div>
 	
-		<a class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} #{lbl.ViewItemFull_lblCreators}" /></a>	
+		<a id="lnkHideGroupPersOrg" class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} #{lbl.ViewItemFull_lblCreators}" /></a>	
 	</div>
-	<a class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}  #{lbl.ViewItemFull_lblCreators}" /></a>
+	<a id="lnkShowGroupPersOrg" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}  #{lbl.ViewItemFull_lblCreators}" /></a>
 </h:panelGroup>
